--- a/package.json
+++ b/package.json
@@ -6,12 +6,13 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "dev-tester": "nodemon dev_tester.ts"
+    "lint": "next lint"
   },
   "dependencies": {
     "bcrpyt": "^2.0.0",
     "bcrypt": "^5.1.1",
+    "crypto": "^1.0.1",
+    "js-cookie": "^3.0.5",
     "mongodb": "^6.15.0",
     "next": "15.2.4",
     "react": "^19.0.0",
@@ -23,6 +24,7 @@
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
     "@types/bcrypt": "^5.0.2",
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
