--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@floating-ui/react": "^0.27.8",
+    "@headlessui/react": "^2.2.3",
     "bcrpyt": "^2.0.0",
     "bcrypt": "^5.1.1",
     "boring-avatars": "^1.11.2",
